--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "maplibre-gl": "^4.7.1",
+    "maplibre-react-components": "^0.1.8",
+    "maplibre-theme": "^0.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
