--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "openai": "^4.67.1"
   }
 }
