--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "openai": "^4.67.1"
+    "firebase": "^10.14.0",
+    "openai": "^4.67.1",
+    "puppeteer": "^23.5.0"
   }
 }
